# GPT_FactChecker

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chatGPT.py  example_function.py  functions.py  main.py  mypy.ini  pyproject.toml  requirements.txt  util.py
.github/workflows/: ci.yaml
app/: __init__.py  main.py  settings.py
app/api/v1/: app.py
app/chatGPT/: __init__.py  core.py  prompts.py
functions/: code.py
lambda/: code.py
scripts/: build.sh  install.sh  install_dev.sh
tests/: basic_test.py
